# IR_Final

./: prompt_general.txt
hieu/: .env  .env.example  .gitignore  INDEX.md  PACKAGE_CONTENTS.txt  README.md  SETUP.md  START_HERE.txt  SUBMISSION_READY.txt  client.py  config.py  download_model.py  llm_client.py  main.py  pyproject.toml  rag.py  run.bat  run.sh  vector_store.py
hieu/.claude/: settings.local.json
lam/: .env.example  .gitignore  README.md  client.py  config.py  download_model.py  llm_client.py  main.py  pyproject.toml  rag.py  requirements.txt  text_utils.py  vector_store.py
nhat/: README.md  chunker.py  config.py  download_model.py  embedder.py  llm_client.py  main.py  rag_pipeline.py  register.py  requirements.txt  retriever.py  vectordb.py
